--- a/pages/starter-kalos.html
+++ b/pages/starter-kalos.html
@@ -14,8 +14,8 @@
         crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="/pokemon-cards-boostrap/style.css">
+    <title>Starters Kalos</title>
 </head>
 
 <body>
@@ -28,8 +28,8 @@
                 <button class="navbar-toggler border-5 border-white p-0 w-100 justify-content-end" type="button"
                     data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <a class="navbar-brand" href="#"><img src="assets/Pokeball.png" alt="logo" title="logo"
-                            style="width: 5rem;"></a>
+                    <a class="navbar-brand" href="#"><img src="/pokemon-cards-boostrap/assets/Pokeball.png" alt="logo"
+                            title="logo" style="width: 5rem;"></a>
                 </button>
 
                 <div class="collapse navbar-collapse justify-content-between bg-danger" id="navbarSupportedContent">
@@ -37,8 +37,9 @@
                     <ul class="navbar-nav align-items-center fs-4">
 
                         <li class="nav-item">
-                            <a class="nav-link active text-white" aria-current="page" href="#"><img
-                                    src="assets/Pokeball.png" style="width: 5rem;" alt=""></a>
+                            <a class="nav-link active text-white" aria-current="page"
+                                href="/pokemon-cards-boostrap"><img src="/pokemon-cards-boostrap/assets/Pokeball.png"
+                                    style="width: 5rem;" alt=""></a>
                         </li>
 
                         <li class="nav-item">
@@ -54,14 +55,19 @@
                             </a>
 
                             <ul class="dropdown-menu text-white bg-black" aria-labelledby="navbarDropdown">
+
                                 <li><a class="dropdown-item text-white bg-black"
-                                        href="/pokemon-cards-boostrap/pages/starter-kanto.html">Kanto</a>
-                                </li>
+                                        href="/pokemon-cards-boostrap/pages/starter-kanto.html">Kanto</a></li>
+
                                 <li><a class="dropdown-item text-white bg-black"
                                         href="/pokemon-cards-boostrap/pages/starter-johto.html">Johto</a></li>
+
                                 <li><a class="dropdown-item text-white bg-black"
                                         href="/pokemon-cards-boostrap/pages/starter-hoenn.html">Hoenn</a></li>
-                                <li><a class="dropdown-item text-white bg-black" href="#">Sinnoh</a></li>
+
+                                <li><a class="dropdown-item text-white bg-black"
+                                        href="/pokemon-cards-boostrap/pages/starter-sinnoh.html">Sinnoh</a></li>
+
                                 <li><a class="dropdown-item text-white bg-black" href="#">Unova</a></li>
                                 <li><a class="dropdown-item text-white bg-black" href="#">Kalos</a></li>
                                 <li><a class="dropdown-item text-white bg-black" href="#">Alola</a></li>
@@ -82,103 +88,79 @@
     </header>
 
     <main>
-
-
         <div class="text-white text-center">
-            <h1>Starter Pokémon</h1>
-            <h2>Choose Your Region</h2>
+            <h1>Starter Pokémon Kalos</h1>
         </div>
         <div class="d-flex align-items-center justify-content-center">
-
             <div class="d-flex flex-wrap card-container">
 
-                <a class="link-card" href="pages/starter-kanto.html">
-                    <div class="card w-100">
+                <a class="link-card" href="https://www.serebii.net/pokedex-sm/653.shtml">
+                    <div class="card">
 
                         <div class="card-img">
-                            <img class="blur" src="assets/kanto-starter/kanto-starters.png" class="card-img-top"
+                            <img src="/pokemon-cards-boostrap/assets/kalos-starter/fennekin.png" class="card-img-top"
                                 alt="...">
                         </div>
 
-                        <div class="card-body text-center">
-                            <h5 class="card-title">Kanto Starters</h5>
+                        <div class="card-body">
+                            <h5 class="card-title">Fennekin</h5>
+                            <p class="card-text">Eating a twig fills it with energy, and its roomy ears give vent to air
+                                hotter than 390 degrees Fahrenheit.
+                            </p>
+                        </div>
+
+                        <div class="card-footer">
+                            <small class="text-muted">Pokémon X/Y</small>
+                        </div>
+
+                    </div>
+                </a>
+
+
+                <a class="link-card" href="https://www.serebii.net/pokedex-sm/650.shtml">
+                    <div class="card">
+
+                        <div class="card-img">
+                            <img src="/pokemon-cards-boostrap/assets/kalos-starter/chespin.png" class="card-img-top"
+                                alt="...">
+                        </div>
+
+                        <div class="card-body">
+                            <h5 class="card-title">Chespin</h5>
+                            <p class="card-text">
+                                The quills on its head are usually soft. When it flexes them, the points become so hard
+                                and sharp that they can pierce rock.</p>
+                        </div>
+
+                        <div class="card-footer">
+                            <small class="text-muted">Pokémon X/Y</small>
                         </div>
                     </div>
                 </a>
 
-                <a class="link-card" href="pages/starter-johto.html">
-                    <div class="card w-100">
+                <a class="link-card" href="https://www.serebii.net/pokedex-xy/656.shtml">
+                    <div class=" card">
 
                         <div class="card-img">
-                            <img class="blur" src="assets/johto-starter/johto-starter.png" class="card-img-top"
+                            <img src="/pokemon-cards-boostrap/assets/kalos-starter/froakie.png" class="card-img-top"
                                 alt="...">
                         </div>
 
-                        <div class="card-body text-center">
-                            <h5 class="card-title">Johto Starters</h5>
+                        <div class="card-body">
+                            <h5 class="card-title">Froakie</h5>
+                            <p class="card-text">
+                                It protects its skin by covering its body in delicate bubbles. Beneath its
+                                happy-go-lucky air, it keeps a watchful eye on its surroundings.</p>
                         </div>
+
+                        <div class="card-footer">
+                            <small class="text-muted">Pokémon X/Y</small>
+                        </div>
+
                     </div>
                 </a>
-
-                <a class="link-card" href="pages/starter-hoenn.html">
-                    <div class="card w-100">
-
-                        <div class="card-img">
-                            <img class="blur" src="assets/hoenn-starter/hoenn-starter.png" class="card-img-top"
-                                alt="...">
-                        </div>
-
-                        <div class="card-body text-center">
-                            <h5 class="card-title">Hoenn Starters</h5>
-                        </div>
-                    </div>
-                </a>
-
-                <a class="link-card" href="pages/starter-sinnoh.html">
-                    <div class="card w-100">
-
-                        <div class="card-img">
-                            <img class="blur" src="assets/sinnoh-starter/sinnoh-starter.png" class="card-img-top"
-                                alt="...">
-                        </div>
-
-                        <div class="card-body text-center">
-                            <h5 class="card-title">Sinnoh Starters</h5>
-                        </div>
-                    </div>
-                </a>
-
-                <a class="link-card" href="pages/starter-unova.html">
-                    <div class="card w-100">
-
-                        <div class="card-img">
-                            <img class="blur" src="assets/unova-starter/unova-starter.png" class="card-img-top"
-                                alt="...">
-                        </div>
-
-                        <div class="card-body text-center">
-                            <h5 class="card-title">Unova Starters</h5>
-                        </div>
-                    </div>
-                </a>
-
-                <a class="link-card" href="pages/starter-kalos.html">
-                    <div class="card w-100">
-
-                        <div class="card-img">
-                            <img class="blur" src="assets/kalos-starter/starter-kalos.png" class="card-img-top"
-                                alt="...">
-                        </div>
-
-                        <div class="card-body text-center">
-                            <h5 class="card-title">Kalos Starters</h5>
-                        </div>
-                    </div>
-                </a>
-
             </div>
         </div>
-
     </main>
 
     <footer>
