--- a/pages/starter-galar.html
+++ b/pages/starter-galar.html
@@ -14,8 +14,8 @@
         crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="/pokemon-cards-boostrap/style.css">
+    <title>Starters Galar</title>
 </head>
 
 <body>
@@ -28,8 +28,8 @@
                 <button class="navbar-toggler border-5 border-white p-0 w-100 justify-content-end" type="button"
                     data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <a class="navbar-brand" href="#"><img src="assets/Pokeball.png" alt="logo" title="logo"
-                            style="width: 5rem;"></a>
+                    <a class="navbar-brand" href="#"><img src="/pokemon-cards-boostrap/assets/Pokeball.png" alt="logo"
+                            title="logo" style="width: 5rem;"></a>
                 </button>
 
                 <div class="collapse navbar-collapse justify-content-between bg-danger" id="navbarSupportedContent">
@@ -37,8 +37,9 @@
                     <ul class="navbar-nav align-items-center fs-4">
 
                         <li class="nav-item">
-                            <a class="nav-link active text-white" aria-current="page" href="#"><img
-                                    src="assets/Pokeball.png" style="width: 5rem;" alt=""></a>
+                            <a class="nav-link active text-white" aria-current="page"
+                                href="/pokemon-cards-boostrap"><img src="/pokemon-cards-boostrap/assets/Pokeball.png"
+                                    style="width: 5rem;" alt=""></a>
                         </li>
 
                         <li class="nav-item">
@@ -54,14 +55,19 @@
                             </a>
 
                             <ul class="dropdown-menu text-white bg-black" aria-labelledby="navbarDropdown">
+
                                 <li><a class="dropdown-item text-white bg-black"
-                                        href="/pokemon-cards-boostrap/pages/starter-kanto.html">Kanto</a>
-                                </li>
+                                        href="/pokemon-cards-boostrap/pages/starter-kanto.html">Kanto</a></li>
+
                                 <li><a class="dropdown-item text-white bg-black"
                                         href="/pokemon-cards-boostrap/pages/starter-johto.html">Johto</a></li>
+
                                 <li><a class="dropdown-item text-white bg-black"
                                         href="/pokemon-cards-boostrap/pages/starter-hoenn.html">Hoenn</a></li>
-                                <li><a class="dropdown-item text-white bg-black" href="#">Sinnoh</a></li>
+
+                                <li><a class="dropdown-item text-white bg-black"
+                                        href="/pokemon-cards-boostrap/pages/starter-sinnoh.html">Sinnoh</a></li>
+
                                 <li><a class="dropdown-item text-white bg-black" href="#">Unova</a></li>
                                 <li><a class="dropdown-item text-white bg-black" href="#">Kalos</a></li>
                                 <li><a class="dropdown-item text-white bg-black" href="#">Alola</a></li>
@@ -82,132 +88,79 @@
     </header>
 
     <main>
-
-
         <div class="text-white text-center">
-            <h1>Starter Pokémon</h1>
-            <h2>Choose Your Region</h2>
+            <h1>Starter Pokémon Galar</h1>
         </div>
         <div class="d-flex align-items-center justify-content-center">
-
             <div class="d-flex flex-wrap card-container">
 
-                <a class="link-card" href="pages/starter-kanto.html">
-                    <div class="card w-100">
+                <a class="link-card" href="https://www.serebii.net/pokedex-swsh/scorbunny">
+                    <div class="card">
 
                         <div class="card-img">
-                            <img class="blur" src="assets/kanto-starter/kanto-starters.png" class="card-img-top"
+                            <img src="/pokemon-cards-boostrap/assets/galar-starter/scorbunny.png" class="card-img-top"
                                 alt="...">
                         </div>
 
-                        <div class="card-body text-center">
-                            <h5 class="card-title">Kanto Starters</h5>
-                        </div>
-                    </div>
-                </a>
-
-                <a class="link-card" href="pages/starter-johto.html">
-                    <div class="card w-100">
-
-                        <div class="card-img">
-                            <img class="blur" src="assets/johto-starter/johto-starter.png" class="card-img-top"
-                                alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Scorbunny</h5>
+                            <p class="card-text">A warm-up of running around gets fire energy coursing through this
+                                Pokémon's body. Once that happens, it's ready to fight at full power.
+                            </p>
                         </div>
 
-                        <div class="card-body text-center">
-                            <h5 class="card-title">Johto Starters</h5>
-                        </div>
-                    </div>
-                </a>
-
-                <a class="link-card" href="pages/starter-hoenn.html">
-                    <div class="card w-100">
-
-                        <div class="card-img">
-                            <img class="blur" src="assets/hoenn-starter/hoenn-starter.png" class="card-img-top"
-                                alt="...">
+                        <div class="card-footer">
+                            <small class="text-muted">Pokémon Sword/Shield</small>
                         </div>
 
-                        <div class="card-body text-center">
-                            <h5 class="card-title">Hoenn Starters</h5>
-                        </div>
-                    </div>
-                </a>
-
-                <a class="link-card" href="pages/starter-sinnoh.html">
-                    <div class="card w-100">
-
-                        <div class="card-img">
-                            <img class="blur" src="assets/sinnoh-starter/sinnoh-starter.png" class="card-img-top"
-                                alt="...">
-                        </div>
-
-                        <div class="card-body text-center">
-                            <h5 class="card-title">Sinnoh Starters</h5>
-                        </div>
-                    </div>
-                </a>
-
-                <a class="link-card" href="pages/starter-unova.html">
-                    <div class="card w-100">
-
-                        <div class="card-img">
-                            <img class="blur" src="assets/unova-starter/unova-starter.png" class="card-img-top"
-                                alt="...">
-                        </div>
-
-                        <div class="card-body text-center">
-                            <h5 class="card-title">Unova Starters</h5>
-                        </div>
-                    </div>
-                </a>
-
-                <a class="link-card" href="pages/starter-kalos.html">
-                    <div class="card w-100">
-
-                        <div class="card-img">
-                            <img class="blur" src="assets/kalos-starter/starter-kalos.png" class="card-img-top"
-                                alt="...">
-                        </div>
-
-                        <div class="card-body text-center">
-                            <h5 class="card-title">Kalos Starters</h5>
-                        </div>
                     </div>
                 </a>
 
 
-                <a class="link-card" href="pages/starter-alola.html">
-                    <div class="card w-100">
+                <a class="link-card" href="https://www.serebii.net/pokedex-swsh/sobble">
+                    <div class="card">
 
                         <div class="card-img">
-                            <img class="blur" src="assets/alola-starter/starter-alola.png" class="card-img-top"
+                            <img src="/pokemon-cards-boostrap/assets/galar-starter/sobble.png" class="card-img-top"
                                 alt="...">
                         </div>
 
-                        <div class="card-body text-center">
-                            <h5 class="card-title">Alola Starters</h5>
+                        <div class="card-body">
+                            <h5 class="card-title">Sobble</h5>
+                            <p class="card-text">
+                                When scared, this Pokémon cries. Its tears pack the chemical punch of 100 onions, and
+                                attackers won't be able to resist weeping.</p>
+                        </div>
+
+                        <div class="card-footer">
+                            <small class="text-muted">Pokémon Sword/Shield</small>
                         </div>
                     </div>
                 </a>
 
-                <a class="link-card" href="pages/starter-galar.html">
-                    <div class="card w-100">
+                <a class="link-card" href="https://www.serebii.net/pokedex-swsh/grookey">
+                    <div class=" card">
 
                         <div class="card-img">
-                            <img class="blur" src="assets/galar-starter/starter-galar.png" class="card-img-top"
+                            <img src="/pokemon-cards-boostrap/assets/galar-starter/grookey.png" class="card-img-top"
                                 alt="...">
                         </div>
 
-                        <div class="card-body text-center">
-                            <h5 class="card-title">Galar Starters</h5>
+                        <div class="card-body">
+                            <h5 class="card-title">Grookey</h5>
+                            <p class="card-text">
+                                When it uses its special stick to strike up a beat, the sound waves produced carry
+                                revitalizing energy to the plants and flowers in the area.</p>
                         </div>
+
+                        <div class="card-footer">
+                            <small class="text-muted">Pokémon Sword/Shield</small>
+                        </div>
+
                     </div>
                 </a>
-
             </div>
         </div>
-
     </main>
 
     <footer>
