--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>Start Pokémon Home</title>
+    <title>Starter Pokémon Home</title>
 </head>
 
 <body>
@@ -28,11 +28,11 @@
                 <button class="navbar-toggler border-5 border-white p-0 w-100 justify-content-end" type="button"
                     data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <a class="navbar-brand" href="#"><img src="assets/Pokeball.png" alt="logo" title="logo"
+                    <a class="navbar-brand" href="#"><img src="assets/ultraball.png" alt="logo" title="logo"
                             style="width: 5rem;"></a>
                 </button>
 
-                <div class="collapse navbar-collapse justify-content-between bg-danger" id="navbarSupportedContent">
+                <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
 
                     <ul class="navbar-nav align-items-center fs-4">
 
@@ -50,7 +50,7 @@
 
                             <a class="nav-link dropdown-toggle text-white " href="#" id="navbarDropdown" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
-                                Starters
+                                Region
                             </a>
 
                             <ul class="dropdown-menu text-white bg-black" aria-labelledby="navbarDropdown">
